# Decentralized-Storage

./: README.md  cargo.toml
programs/contract/: Cargo.toml
programs/contract/src/: constants.rs  helpers.rs  lib.rs  state.rs
programs/contract/src/instructions/: challenge_proof.rs  claim_reward.rs  create_challenge.rs  create_epoch.rs  finalize_epoch.rs  finalize_espoch.rs  initialise.rs  mod.rs  register_object.rs  register_proof.rs  slash_miner.rs  stake_tokens.rs  submit_proof.rs  unstake_tokens.rs
programs/contract/tests/: integeration.rs
