[package]
name = "contract"
version = "0.1.0"
edition = "2024"

[dependencies]
borsh = "1.5.7"
pinocchio = "0.9"
pinocchio-token = "0.4.0"
pinocchio-system = "0.3.0"
solana-program = "3.0.0"
spl-token = "8.0.0"
solana-program-test = "3.0.7"
solana-sdk = "3.0.0"
litesvm = "0.8.1"
spl-associated-token-account = "7.0.0"